// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> component should render correctly 1`] = `
<button
  className="button "
  onClick={[MockFunction]}
  type="button"
/>
`;

exports[`<Button/> component when there are children to be rendered renders correctly 1`] = `
<button
  className="button "
  onClick={[MockFunction]}
  type="button"
>
  <span>
    hello world
  </span>
</button>
`;
